greeting class creation
Added a class as a way to confirm my commits can be pushed to Github corretcly.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     </div>
                 </div>
             </section>
+            <div class="greeting">
+                <h2>Próximamente proyectos nuevos...</h2>
+            </div>
         </main>
         <footer>
             <h2>Redes sociales</h2>
